package com.mvmomente.restaurant_order_api.enums;

public enum OrderStatus {
    PENDING,
    PREPARING,
    READY,
    DELIVERED,
    CANCELED
}
